OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/Requirement_Field_Validation_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Stores validation rules for requirement fields. Used by the Validation Rule Builder to configure field-level validation without code deployments.</description>
    <label>Requirement Field Validation Rule</label>
    <pluralLabel>Requirement Field Validation Rules</pluralLabel>
</CustomObject>