OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>User ID of the user who created the rule (stored as text)</description>
    <label>Created By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>