OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of what the validation rule does</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>