OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message displayed when validation fails (supports field variable substitution)</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>