OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/External_Service__c.field-meta.xml
<CustomField>
    <fullName>External_Service__c</fullName>
    <description>External service identifier (if Validation_Type__c = External)</description>
    <label>External Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>