OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <description>User ID of the user who last modified the rule (stored as text)</description>
    <label>Last Modified By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>