OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Requirement_Field__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Field__c</fullName>
    <description>ID of the specific Requirement_Field__c record this rule applies to (optional - can be global). Stored as text since Custom Metadata Types cannot have lookups to custom objects.</description>
    <label>Requirement Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>