OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Validation_Rule__mdt/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <description>Type of validation (Format check, Cross-field validation, External service validation)</description>
    <label>Validation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Format</fullName>
                <default>true</default>
                <label>Format</label>
            </value>
            <value>
                <fullName>Cross-Field</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>